--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
         "@vue/cli-plugin-router": "~5.0.0",
         "@vue/cli-plugin-vuex": "~5.0.0",
         "@vue/cli-service": "~5.0.0",
-        "sass": "^1.72.0",
-        "sass-loader": "^14.1.1",
         "eslint": "^8.0.1",
         "eslint-config-standard": "^17.1.0",
         "eslint-plugin-import": "^2.25.2",
         "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
         "eslint-plugin-promise": "^6.0.0",
-        "eslint-plugin-vue": "^9.16.1"
+        "eslint-plugin-vue": "^9.16.1",
+        "sass": "^1.72.0",
+        "sass-loader": "^14.1.1"
     },
     "browserslist": [
         "> 1%",
